#42 - Update VectorCli.java